# prism3.0

./: .gitignore  PRISM_OmniDocBench_Report.md  README.md  Ultimate Screen2la Te X Methodology (samsung Prism).txt  analyze_benchmark.py  app.py  benchmark_audit_report.md  compare_infty_vs_prism.py  confirm.md  context.md  detection_postprocess.py  diagnose_texo.py  evaluate_partial.py  frequency_filter_new.py  frequency_filter_old.py  generate_final_report.py  latex_builder.py  layout_utils.py  make_report.py  math_worker.py  math_worker_onnx.py  math_worker_unimernet.py  metrics.txt  models_interface.py  orchestrate.py  pdf2latexmetrics.txt  pipeline_overview.md  pyproject.toml  rerun_mixed.py  results.md  run_batch.py  run_bench_26.py  run_bench_unimernet.py  run_bench_workers.py  run_benchmark_batch.py  run_benchmark_got.py  run_comprehensive_benchmark.py  run_docvqa.py  run_fox.py  run_full_benchmark.py  (+25 more)
GOT-OCR2/: config.json
Texo/: benchmark_clean.py  benchmark_stream_unimer.py  benchmark_texo.py  exp1_output_compare.py  exp2_threading.py  exp3_seq_length.py  exp4_image_size.py  pyproject.toml  run_texo.py  web_demo.py
benchmark_results/: benchmark_results.csv  benchmark_results_got.csv  benchmark_summary.txt  final_report.md  final_report_got.md  full_benchmark_results.csv  latency_log.csv  latency_log_26.csv  latency_log_26_pix2tex.csv  latency_log_26_texo.csv  latency_log_got.csv  partial_results.csv
benchmarks/: benchmark_glare.py  make_report.py  qa_extract.py  rerun_mixed.py  run_docvqa.py  run_fox.py  run_ocrbench.py  run_omnidocbench.py
docs/: arch.txt  arch2.txt
evaluation/: __init__.py  eval.py  normalizer.py  profiler.py
final_folder/: metrics.json
normalization/: __init__.py  frequency_filter.py  geometric.py  modality.py  pipeline.py  region_adaptive.py
omnidocbench_preds/: docstructbench_dianzishu_zhongwenzaixian-o.O-60599898.pdf_30.md  docstructbench_dianzishu_zhongwenzaixian-o.O-61520814.pdf_185.md  docstructbench_dianzishu_zhongwenzaixian-o.O-61522235.pdf_170.md  docstructbench_llm-raw-scihub-o.O-j.chroma.2005.05.085.pdf_4.md  docstructbench_llm-raw-scihub-o.O-j.physletb.2004.06.101.pdf_3.md  eastmoney_62b4149b1612ce28d20f26cd5c5b2e18f80b26fca6e4452e090376a2fe72eae3.pdf_0.md  eval_config.yaml  jiaocaineedrop_Chapter9.pdf_46.md  jiaocaineedrop_Evans_PDE_Solution_Chapter_6_Second-Order_Elliptic_Equations.pdf_5.md  jiaocaineedrop_jiaocai_needrop_en_1898.md  jiaocaineedrop_jiaocai_needrop_en_3361.md  yanbaopptmerge_SE05.pdf_7.md  (+4 more)
(+350 files in other folders)
