[project]
name = "samsung-prism-yolo-orchestration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "datasets[vision]>=4.8.4",
    "easyocr>=1.7.2",
    "evaluate>=0.4.6",
    "ftfy>=6.3.1",
    "lightning>=2.6.1",
    "numpy>=2.0",
    "onnxruntime>=1.24.4",
    "opencv-python>=4.8.0",
    "optimum-onnx>=0.1.0",
    "paddleocr>=3.4.0",
    "paddlepaddle>=3.3.0",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "psutil>=7.2.2",
    "rapid-latex-ocr>=0.0.6",
    "rapidfuzz>=3.14.5",
    "scipy>=1.11.0",
    "timm>=1.0.26",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.57.6",
    "ultralytics>=8.4.24",
]

[dependency-groups]
dev = []
